sreeshanth(translation changes  )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1274 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -543,6 +543,7 @@ en: # locale
   percentage: "Percentage"
   pending: "Pending"
   approved: "Approved"
+  rejected: "Rejected"
   denied: "Denied"
   select_employee: "Select Employee"
   remarks: "Remarks"
