sreeshanth(translation issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1290 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1808,6 +1808,7 @@ ar:
   flash_msg13: "الفئة التعديل بنجاح."
   flash_msg14: "تفاصيل التعديل بنجاح."
   flash_msg15: "خطأ : يجب أن يكون تاريخ الاستحقاق بعد تاريخ الانتهاء."
+  flash_msg16: "لا يوجد جدول زمني لدخول التاريخ المحدد"
 
 #configuration controller translation
   configuration:
@@ -2044,8 +2045,7 @@ ar:
     flash1: "وقد تم بالفعل نشر الجدول الزمني"
     flash2: "الجدول الزمني لتحديث"
     flash3: "الجدول الزمني النشر"
-    flash4: "لا يوجد جدول زمني لدخول التاريخ المحدد"
-
+    
   shared:
     user:
       key: "فو"
