--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1780,6 +1780,7 @@ hi:
   flash_msg13: "श्रेणी सफलतापूर्वक संपादित|"
   flash_msg14: "ब्योरे सफलतापूर्वक संपादित|"
   flash_msg15: "त्रुटि: नियत दिनांक समाप्ति तिथि के बाद होना चाहिए."
+  flash_msg16: "चयनित तिथि के लिए कोई समय सारिणी प्रविष्टि"
 
 #configuration controller translation
   configuration:
@@ -2017,8 +2018,7 @@ hi:
     flash1: "समय सारिणी पहले ही प्रकाशित किया गया"
     flash2: "समय सारिणी अद्यतन"
     flash3: "समय तालिका प्रकाशित"
-    flash4: "चयनित तिथि के लिए कोई समय सारिणी प्रविष्टि"
-
+    
   shared:
     user:
       key: "फू"
