bug fixed => message not shown in additional exam deletion, fixes #1213
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1294 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2034,6 +2034,7 @@ ar:
 #additional exams controller
   additional_exams:
     flash1: "نتائج الامتحان إضافية محدثة."
+    flash2: "الامتحان بنجاح حذف إضافية."
     flash3: "تحديث تفاصيل إضافية الامتحان بنجاح."
 
 #additional exam groups controller
