sreeshanth(style issues and flash msg misssing)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1304 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2003,7 +2003,9 @@ ar:
     flash20: "الخصم مسبقا لقبول عدد"
     flash23: "وينبغي أن يكون المبلغ المدفوع لا يكون سلبيا"
     flash24: "وينبغي أن مبلغ الغرامة التي لا تكون سلبية"
-
+    flash25: "التبرع حذف بنجاح"
+    flash26: "رسوم إضافية لتحديث بنجاح"
+    flash27: "رسوم إضافية حذف بنجاح"
 
 ## traslation for xml controller
   xml:
