--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1976,7 +1976,9 @@ hi:
     flash20: "डिस्काउंट पहले से ही प्रवेश संख्या के लिए मौजूद है"
     flash23: "राशि के लिए भुगतान किया नकारात्मक नहीं होना चाहिए"
     flash24: "ठीक राशि नकारात्मक नहीं होना चाहिए"
-
+    flash25: "दान सफलतापूर्वक हटाया"
+    flash26: "अतिरिक्त सफलतापूर्वक अद्यतन फीस"
+    flash27: "अतिरिक्त फीस सफलतापूर्वक नष्ट कर दिया"
     
 ## traslation for xml controller
   xml:
