sreeshanth(style issues and flash msg misssing)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1306 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2006,6 +2006,7 @@ ar:
     flash25: "التبرع حذف بنجاح"
     flash26: "رسوم إضافية لتحديث بنجاح"
     flash27: "رسوم إضافية حذف بنجاح"
+    flash28: "المسؤولية بنجاح إنشاء"
 
 ## traslation for xml controller
   xml:
