--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1979,6 +1979,7 @@ hi:
     flash25: "दान सफलतापूर्वक हटाया"
     flash26: "अतिरिक्त सफलतापूर्वक अद्यतन फीस"
     flash27: "अतिरिक्त फीस सफलतापूर्वक नष्ट कर दिया"
+    flash28: "दायित्व सफलतापूर्वक बनाया"
     
 ## traslation for xml controller
   xml:
