sreeshanth(style issues and flash msg misssing)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1308 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1809,6 +1809,15 @@ ar:
   flash_msg14: "تفاصيل التعديل بنجاح."
   flash_msg15: "خطأ : يجب أن يكون تاريخ الاستحقاق بعد تاريخ الانتهاء."
   flash_msg16: "لا يوجد جدول زمني لدخول التاريخ المحدد"
+  flash_msg17 : "خلقت المعاملات التلقائية بنجاح"
+  flash_msg18 : "الصفقة بنجاح تحديث تلقائي"
+  flash_msg19 : "معاملة التلقائية حذف بنجاح"
+  flash_msg20 : "خلق الأصول بنجاح"
+  flash_msg21 : "الأصول تحديث بنجاح"
+  flash_msg22 : "الأصول حذف بنجاح"
+  flash_msg23 : "المسؤولية بنجاح إنشاء"
+  flash_msg24 : "المسؤولية المحدثة بنجاح"
+  flash_msg25 : "المسؤولية حذف بنجاح"
 
 #configuration controller translation
   configuration:
@@ -2006,8 +2015,7 @@ ar:
     flash25: "التبرع حذف بنجاح"
     flash26: "رسوم إضافية لتحديث بنجاح"
     flash27: "رسوم إضافية حذف بنجاح"
-    flash28: "المسؤولية بنجاح إنشاء"
-
+    
 ## traslation for xml controller
   xml:
     flash1: "ضبط XML تحديثها بنجاح"
