--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1781,6 +1781,15 @@ hi:
   flash_msg14: "ब्योरे सफलतापूर्वक संपादित|"
   flash_msg15: "त्रुटि: नियत दिनांक समाप्ति तिथि के बाद होना चाहिए."
   flash_msg16: "चयनित तिथि के लिए कोई समय सारिणी प्रविष्टि"
+  flash_msg17: "स्वचालित लेन - देन सफलतापूर्वक बनाया"
+  flash_msg18: "स्वचालित लेन - देन सफलतापूर्वक अद्यतन"
+  flash_msg19: "स्वचालित लेन - देन को सफलतापूर्वक नष्ट कर दिया"
+  flash_msg20: "एसेट सफलतापूर्वक बनाया"
+  flash_msg21: "एसेट सफलतापूर्वक अपडेट"
+  flash_msg22: "एसेट सफलतापूर्वक नष्ट कर दिया"
+  flash_msg23: "दायित्व सफलतापूर्वक बनाया"
+  flash_msg24: "दायित्व सफलतापूर्वक अद्यतन"
+  flash_msg25: "दायित्व सफलतापूर्वक नष्ट कर दिया"
 
 #configuration controller translation
   configuration:
@@ -1979,7 +1988,6 @@ hi:
     flash25: "दान सफलतापूर्वक हटाया"
     flash26: "अतिरिक्त सफलतापूर्वक अद्यतन फीस"
     flash27: "अतिरिक्त फीस सफलतापूर्वक नष्ट कर दिया"
-    flash28: "दायित्व सफलतापूर्वक बनाया"
     
 ## traslation for xml controller
   xml:
