sreeshanth(style issues and flash msg missing in grading levels )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1313 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1818,6 +1818,9 @@ ar:
   flash_msg23 : "المسؤولية بنجاح إنشاء"
   flash_msg24 : "المسؤولية المحدثة بنجاح"
   flash_msg25 : "المسؤولية حذف بنجاح"
+  flash_msg26:  "تم بنجاح إنشاء مستوى الدرجات."
+  flash_msg27:  "تم تحديث بنجاح مستوى الدرجات."
+  flash_msg28:   "تم حذف بنجاح على مستوى الدرجات." 
 
 #configuration controller translation
   configuration:
