--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1790,6 +1790,9 @@ hi:
   flash_msg23: "दायित्व सफलतापूर्वक बनाया"
   flash_msg24: "दायित्व सफलतापूर्वक अद्यतन"
   flash_msg25: "दायित्व सफलतापूर्वक नष्ट कर दिया"
+  flash_msg26: "ग्रेडिंग स्तर सफलतापूर्वक बनाया गया"
+  flash_msg27: "ग्रेडिंग स्तर सफलतापूर्वक अद्यतन किया गया था"
+  flash_msg28: "ग्रेडिंग स्तर को सफलतापूर्वक नष्ट कर दिया था"
 
 #configuration controller translation
   configuration:
