sreeshanth(style issues and flash message issues)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1327 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1820,7 +1820,16 @@ ar:
   flash_msg25 : "المسؤولية حذف بنجاح"
   flash_msg26:  "تم بنجاح إنشاء مستوى الدرجات."
   flash_msg27:  "تم تحديث بنجاح مستوى الدرجات."
-  flash_msg28:   "تم حذف بنجاح على مستوى الدرجات." 
+  flash_msg28:   "تم حذف بنجاح على مستوى الدرجات."
+  flash_msg29: "تم بنجاح إنشاء توقيت فئة."
+  flash_msg30: "توقيت فئة تحديث بنجاح."
+  flash_msg31: "توقيت فئة حذف بنجاح."
+  flash_msg32 : "تفاصيل تحديث بنجاح"
+  flash_msg33 : "جمع ​​الرسوم بنجاح إنشاء"
+  flash_msg34 : "جمع ​​الرسوم حذف بنجاح"
+  flash_msg35 : "خلقت فئة المالية بنجاح"
+  flash_msg36 : "التمويل الفئة المحدثة بنجاح"
+  flash_msg37 : "التمويل الفئة حذف بنجاح"
 
 #configuration controller translation
   configuration:
