--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1815,12 +1815,21 @@ en: # locale
   flash_msg20: "Asset created successfully"
   flash_msg21: "Asset updated successfully"
   flash_msg22: "Asset deleted successfully"
-  flash_msg23:  "Liability created successfully"
-  flash_msg24:  "Liability updated successfully"
-  flash_msg25:  "Liability deleted successfully"
-  flash_msg26:  "Grading level was successfully created."
-  flash_msg27:  "Grading level was successfully updated."
-  flash_msg28:  "Grading level was successfully deleted."
+  flash_msg23: "Liability created successfully"
+  flash_msg24: "Liability updated successfully"
+  flash_msg25: "Liability deleted successfully"
+  flash_msg26: "Grading level was successfully created."
+  flash_msg27: "Grading level was successfully updated."
+  flash_msg28: "Grading level was successfully deleted."
+  flash_msg29: "Class timing was successfully created."
+  flash_msg30: "Class timing updated successfully."
+  flash_msg31: "Class timing deleted successfully."
+  flash_msg32: "Particulars updated successfully"
+  flash_msg33: "Fee collection created successfully"
+  flash_msg34: "Fee collection deleted successfully"
+  flash_msg35: "Finance category created successfully"
+  flash_msg36: "Finance category updated successfully"
+  flash_msg37: "Finance category deleted successfully"
 
 #configuration controller translation
   configuration:
