--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1793,6 +1793,15 @@ hi:
   flash_msg26: "ग्रेडिंग स्तर सफलतापूर्वक बनाया गया"
   flash_msg27: "ग्रेडिंग स्तर सफलतापूर्वक अद्यतन किया गया था"
   flash_msg28: "ग्रेडिंग स्तर को सफलतापूर्वक नष्ट कर दिया था"
+  flash_msg29: "कक्षा समय सफलतापूर्वक बनाया गया"
+  flash_msg30: "कक्षा सफलतापूर्वक अपडेट समय."
+  flash_msg31: "कक्षा समय सफलतापूर्वक नष्ट कर दिया."
+  flash_msg32: "सफलतापूर्वक अद्यतन ब्योरे"
+  flash_msg33: "शुल्क संग्रह सफलतापूर्वक बनाया"
+  flash_msg34: "शुल्क संग्रह सफलतापूर्वक नष्ट कर दिया"
+  flash_msg35: "वित्त वर्ग सफलतापूर्वक बनाया"
+  flash_msg36: "वित्त वर्ग सफलतापूर्वक अद्यतन"
+  flash_msg37: "वित्त वर्ग सफलतापूर्वक नष्ट कर दिया"
 
 #configuration controller translation
   configuration:
