Autosuggest menu * Remove existing outdated jquery *Add latest jquery.min and jquery.ui.min *Add jquery.hotkeys.js *Add jquery.autocomplete *Plugin support for adding autsuggest menus *Broken translation support[TODO] *CSS for autosuggest menu alignment in dashboard.css and application.css *CSS for autosuggest theming in autosuggest.css
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1331 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2079,3 +2079,12 @@ en: # locale
       # the method name (does not include "deliver")
     comment_notification:
       subject: "New Comment"
+
+## Translations for the autosuggest menu.
+autosuggest_menu:
+ search_employees: "Search employees"
+ search_students: "Search students"
+ employee_admission: "Employee Admission"
+ student_admission: "Student Admission"
+ 
+ 
