sreeshanth(auto suggest menu )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1339 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2086,5 +2086,54 @@ en: # locale
    search_students: "Search students"
    employee_admission: "Employee Admission"
    student_admission: "Student Admission"
- 
- 
+   exam: "Exam"
+   set_grading_levels: "Set Grading Levels"
+   exam_management: "Exam Management"
+   additional_exams: "Additional Exams"
+   exam_wise_report: "Exam Wise Report"
+   subject_wise_report: "Subject Wise Report"
+   grouped_exam_report: "Grouped Exam Report"
+   news: "News"
+   event: "Event"
+   view_news: "View News"
+   add_news: "Add News"
+   employee: "Employee"
+   employee_settings: "Employee Settings"
+   employee_subject_association: "Employee Subject Association"
+   employee_leave_management: "Employee Leave Management"
+   add_leave_type: "Add Leave Type"
+   attendance_register: "Attendance Register"
+   attendance_report: "Attendance Report"
+   reset_leave: "Reset Leave"
+   empolyee_payslip: "Employee Payslip"
+   department_wise_payslip: "Department Wise Payslip"
+   finance: "Finance"
+   manage_fees: "Manage Fees"
+   master_fees: "Master Fees"
+   additional_fees: "Additional Fees"
+   view_additional_fees: "View Additional Fees"
+   create_additional_fees: "Create Additional Fees"
+   fees_collection: "Fees Collection"
+   view_fees_collections: "View Fees Collections"
+   fees_submission_by_course: "Fees Submission By Course"
+   fees_submission_for_each_student: "Fees Submission For Each Student"
+   fees_structure: "Fees Structure"
+   fees_defaulters: "Fees Defaulters"
+   finance_categories: "Finance Categories"
+   transactions: "Transactions"
+   add_expense: "Add Expense"
+   expense_list: "Expense List"
+   add_income: "Add Income"
+   income_list: "Income List"
+   transaction_report: "Transaction Report"
+   compare_transactions: "Compare Transactions"
+   donations: "Donations"
+   donors: "Donors"
+   automatic_transactions: "Automatic Transactions"
+   view_payslip: "View Payslip"
+   asset: "Asset"
+   view_assets: "View Assets"
+   liability: "Liability"
+   view_liability: "View Liability"
+
+
