sreeshanth(auto suggest menu )
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1343 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2135,5 +2135,31 @@ en: # locale
    view_assets: "View Assets"
    liability: "Liability"
    view_liability: "View Liability"
+   tally_settings: "Tally Settings"
+   export_for_tally: "Export For Tally"
+   manage_users: "Manage Users"
+   view_users: "View Users"
+   add_users: "Add Users"
+   timetable: "Timetable"
+   create_timetable: "Create Timetable"
+   set_class_timings: "Set Class Timings"
+   view_timetables: "View Timetables"
+   institutional_timetable: "Institutional Timetable"
+   create_weekdays: "Create Weekdays"
+   configuartion_home: "Configuaration Home"
+   manage_course: "Manage Course"
+   manage_batch: "Manage Batch"
+   add_course: "Add Course"
+   add_batch: "Add Batch"
+   batch_transfers: "Batch Transfers"
+   manage_student_category: "Manage Student Category"
+   manage_subjects: "Manage Subjects"
+   general_settings: "General Settings"
+   add_admission_additional_detail: "Add Admission Additional Detail"
+   student_attendance: "Student Attendance"
+   attendance_register: "Attendance Register"
+   attendance_report: "Attendance Report"
+   view_students: "View Students"
+   student_advanced_search: "Student Advanced Search"
 
 
