--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2076,3 +2076,84 @@ es: # locale
     comment_notification:
       subject: "Nuevo comentario"
 
+## Translations for the autosuggest menu.
+  autosuggest_menu:
+    search_employees: "Los empleados de búsqueda"
+    search_students: "Los alumnos que busquen"
+    employee_admission: "Empleado de admisión"
+    student_admission: "De admisión de alumnos"
+    exam: "Examen"
+    set_grading_levels: "Establezca niveles de"
+    exam_management: "Examen de Manejo"
+    additional_exams: "Exámenes adicionales"
+    exam_wise_report: "Examen Sabio Informe"
+    subject_wise_report: "Informe Sabio tema"
+    grouped_exam_report: "Examen agrupados Informe"
+    news: "Noticias"
+    event: "Evento"
+    view_news: "Ver Noticia"
+    add_news: "Añadir Noticias"
+    employee: "Empleado"
+    employee_settings: "Configuración de los empleados"
+    employee_subject_association: "Asociación de Empleados Asunto"
+    employee_leave_management: "Empleado de Gestión Agregar"
+    add_leave_type: "Añadir Deja Tipo"
+    attendance_register: "LISTA DE ASISTENCIA"
+    attendance_report: "Informe de asistencia"
+    reset_leave: "Perdí mi licencia"
+    empolyee_payslip: "Nómina de Empleados"
+    department_wise_payslip: "Departamento de Nómina Sabio"
+    finance: "Finanzas"
+    manage_fees: "Gestionar tarifas"
+    master_fees: "Tarifas maestro"
+    additional_fees: "Cargos adicionales"
+    view_additional_fees: "Ver tasas adicionales"
+    create_additional_fees: "Crear tasas adicionales"
+    fees_collection: "Gastos de cobranza"
+    view_fees_collections: "Ver Colecciones Tarifas"
+    fees_submission_by_course: "Presentación de las tasas del curso"
+    fees_submission_for_each_student: "Honorarios de presentación para cada estudiante"
+    fees_structure: "Estructura de las tasas"
+    fees_defaulters: "Honorarios morosos"
+    finance_categories: "Categorías Finanzas"
+    transactions: "Las transacciones"
+    add_expense: "Añadir gastos"
+    expense_list: "Lista de los gastos"
+    add_income: "Añadir Ingreso"
+    income_list: "Lista de los ingresos"
+    transaction_report: "Informe de transacciones"
+    compare_transactions: "Compare las transacciones"
+    donations: "Donaciones"
+    donors: "Los donantes"
+    automatic_transactions: "Transacciones automáticas"
+    view_payslip: "Ver Nómina"
+    asset: "De activos"
+    view_assets: "Ver los activos"
+    liability: "Responsabilidad"
+    view_liability: "Ver Responsabilidad"
+    tally_settings: "Configuración de cuenta"
+    export_for_tally: "Exportar para Tally"
+    manage_users: "Administrar usuarios"
+    view_users: "Los usuarios pueden ver"
+    add_users: "Agregar usuarios"
+    timetable: "Calendario"
+    create_timetable: "Crear calendario"
+    set_class_timings: "Establecer los intervalos de clase"
+    view_timetables: "Ver horarios"
+    institutional_timetable: "Horario institucional"
+    create_weekdays: "Crear lunes a viernes"
+    configuartion_home: "Configuaration Inicio"
+    manage_course: "Administrar curso"
+    manage_batch: "Administrar lotes"
+    add_course: "Agregar curso"
+    add_batch: "Añadir lotes"
+    batch_transfers: "Las transferencias por lotes"
+    manage_student_category: "Administrar Categoría Estudiantil"
+    manage_subjects: "Manejar Temas"
+    general_settings: "Configuración general"
+    add_admission_additional_detail: "Agregar detalles adicionales de admisión"
+    student_attendance: "Asistencia del Estudiante"
+    attendance_register: "LISTA DE ASISTENCIA"
+    attendance_report: "Informe de asistencia"
+    view_students: "Los estudiantes ven"
+    student_advanced_search: "Estudiantes Búsqueda avanzada"
