--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -2054,3 +2054,85 @@ hi:
 
 
   exam_groups_text: "परीक्षा समूह"
+
+
+  autosuggest_menu:
+    search_employees: "खोज कर्मचारियों"
+    search_students: "खोज छात्रों"
+    employee_admission: "कर्मचारी प्रवेश"
+    student_admission: "छात्र प्रवेश"
+    exam: "परीक्षा"
+    set_grading_levels: "ग्रेडिंग स्तर सेट करें"
+    exam_management: "परीक्षा प्रबंधन"
+    additional_exams: "अतिरिक्त परीक्षा"
+    exam_wise_report: "परीक्षा वार रिपोर्ट"
+    subject_wise_report: "विषय वार रिपोर्ट"
+    grouped_exam_report: "समूहीकृत परीक्षा रिपोर्ट"
+    news: "समाचार"
+    event: "घटना"
+    view_news: "देखें समाचार"
+    add_news: "समाचार जोड़ें"
+    employee: "कर्मचारी"
+    employee_settings: "कर्मचारी सेटिंग्स"
+    employee_subject_association: "कर्मचारी विषय एसोसिएशन"
+    employee_leave_management: "कर्मचारी छोड़ो प्रबंधन"
+    add_leave_type: "प्रकार छोड़ दो जोड़ें"
+    attendance_register: "उपस्थिति पंजी"
+    attendance_report: "उपस्थिति रिपोर्ट"
+    reset_leave: "छोड़ो रीसेट"
+    empolyee_payslip: "कर्मचारी Payslip"
+    department_wise_payslip: "विभाग समझदार Payslip"
+    finance: "वित्त"
+    manage_fees: "शुल्क प्रबंधित"
+    master_fees: "मास्टर शुल्क"
+    additional_fees: "अतिरिक्त शुल्क"
+    view_additional_fees: "अतिरिक्त शुल्क देखें"
+    create_additional_fees: "अतिरिक्त शुल्क बनाएँ"
+    fees_collection: "शुल्क संग्रह"
+    view_fees_collections: "शुल्क संग्रह देखें"
+    fees_submission_by_course: "कोर्स करके शुल्क प्रस्तुत"
+    fees_submission_for_each_student: "प्रत्येक छात्र के लिए प्रस्तुत शुल्क"
+    fees_structure: "शुल्क संरचना"
+    fees_defaulters: "शुल्क बकाएदारों"
+    finance_categories: "वित्त श्रेणियाँ"
+    transactions: "लेन - देन"
+    add_expense: "व्यय जोड़ें"
+    expense_list: "व्यय सूची"
+    add_income: "आय में जोड़ें"
+    income_list: "आय सूची"
+    transaction_report: "लेनदेन रिपोर्ट"
+    compare_transactions: "लेनदेन की तुलना"
+    donations: "दान"
+    donors: "दाताओं"
+    automatic_transactions: "स्वचालित लेनदेन"
+    view_payslip: "देखें Payslip"
+    asset: "संपत्ति"
+    view_assets: "एसेट्स देखें"
+    liability: "देयता"
+    view_liability: "देयता देखें"
+    tally_settings: "टैली सेटिंग्स"
+    export_for_tally: "टैली के लिए निर्यात"
+    manage_users: "उपयोगकर्ता प्रबंधित करें"
+    view_users: "उपयोगकर्ता देखना"
+    add_users: "उपयोगकर्ता जोड़ें"
+    timetable: "समय सारिणी"
+    create_timetable: "समय सारिणी बनाएँ"
+    set_class_timings: "कक्षा स्थिति सेट करें"
+    view_timetables: "देखें timetables"
+    institutional_timetable: "संस्थागत समय सारिणी"
+    create_weekdays: "कार्यदिवस बनाएँ"
+    configuartion_home: "Configuaration होम"
+    manage_course: "कोर्स प्रबंधित"
+    manage_batch: "बैच प्रबंधित"
+    add_course: "कोर्स में जोड़ें"
+    add_batch: "बैच जोड़ें"
+    batch_transfers: "बैच स्थानांतरण"
+    manage_student_category: "छात्र श्रेणी प्रबंधित"
+    manage_subjects: "विषय प्रबंधित"
+    general_settings: "सामान्य सेटिंग्स"
+    add_admission_additional_detail: "प्रवेश अतिरिक्त विस्तार से जोड़ें"
+    student_attendance: "छात्र उपस्थिति"
+    attendance_register: "उपस्थिति पंजी"
+    attendance_report: "उपस्थिति रिपोर्ट"
+    view_students: "देखें छात्र"
+    student_advanced_search: "छात्र उन्नत खोज"
