sreeshanth(auto suggest menu  placeholder translation)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1344 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2161,5 +2161,6 @@ en: # locale
    attendance_report: "Attendance Report"
    view_students: "View Students"
    student_advanced_search: "Student Advanced Search"
+   search_actions_and_events: "Search Actions,Events and People"
 
 
