--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -2136,3 +2136,4 @@ hi:
     attendance_report: "उपस्थिति रिपोर्ट"
     view_students: "देखें छात्र"
     student_advanced_search: "छात्र उन्नत खोज"
+    search_actions_and_events: "खोज क्रियाएँ, घटनाक्रम और लोग"
