--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -2157,3 +2157,4 @@ es: # locale
     attendance_report: "Informe de asistencia"
     view_students: "Los estudiantes ven"
     student_advanced_search: "Estudiantes Búsqueda avanzada"
+    search_actions_and_events: "Las acciones de búsqueda, eventos y personas"
