sreeshanth(flash msg issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1350 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1830,6 +1830,10 @@ ar:
   flash_msg35 : "خلقت فئة المالية بنجاح"
   flash_msg36 : "التمويل الفئة المحدثة بنجاح"
   flash_msg37 : "التمويل الفئة حذف بنجاح"
+  flash_msg39 : "تعيين الطلاب بنجاح"
+  flash_msg40 : "تعيين جميع الطلاب بنجاح"
+  flash_msg41 : "إزالة الطلاب بنجاح"
+  flash_msg42 : "إزالة جميع الطلاب بنجاح"
 
 #configuration controller translation
   configuration:
