--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -1802,6 +1802,10 @@ hi:
   flash_msg35: "वित्त वर्ग सफलतापूर्वक बनाया"
   flash_msg36: "वित्त वर्ग सफलतापूर्वक अद्यतन"
   flash_msg37: "वित्त वर्ग सफलतापूर्वक नष्ट कर दिया"
+  flash_msg39: "छात्रों को सफलतापूर्वक निरुपित"
+  flash_msg40: "सभी छात्रों को सफलतापूर्वक निरुपित"
+  flash_msg41: "छात्रों को सफलतापूर्वक निकालें"
+  flash_msg42: "सभी छात्रों को सफलतापूर्वक निकालें"
 
 #configuration controller translation
   configuration:
