sreeshanth(flash issue)
git-svn-id: file:///svn/fedena2.1/branches/fedena2.1_i18n@1356 1b8ff446-76f8-11e0-a33c-ba5893e5f458

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -2082,3 +2082,85 @@ ar:
       # the method name (does not include "deliver")
     comment_notification:
       subject: "تعليق جديد"
+
+  ## Translations for the autosuggest menu.
+  autosuggest_menu:
+    search_students: "بحث الطلاب"
+    employee_admission: "موظف القبول"
+    student_admission: "طالب القبول"
+    exam: "امتحان"
+    set_grading_levels: "تعيين مستويات التصنيف"
+    exam_management: "امتحان الإدارة"
+    additional_exams: "إضافية الامتحانات"
+    exam_wise_report: "تقرير الامتحان وايز"
+    subject_wise_report: "الحكيم عن موضوع"
+    grouped_exam_report: "امتحان تجميع تقرير"
+    news: "أخبار"
+    event: "حدث"
+    view_news: "عرض الخبر"
+    add_news: "إضافة أخبار"
+    employee: "عامل"
+    employee_settings: "موظف الضبط"
+    employee_subject_association: "رابطة الموظف الموضوع"
+    employee_leave_management: "الموظف ترك إدارة"
+    add_leave_type: "إضافة اترك نوع"
+    attendance_register: "سجل الحضور"
+    attendance_report: "تقرير الحضور"
+    reset_leave: "إعادة اترك"
+    empolyee_payslip: "الموظف قسيمة الدفع"
+    department_wise_payslip: "قسم الحكماء قسيمة الدفع"
+    finance: "تمويل"
+    manage_fees: "إدارة الرسوم"
+    master_fees: "سيد الرسوم"
+    additional_fees: "رسوم إضافية"
+    view_additional_fees: "عرض رسوم إضافية"
+    create_additional_fees: "إنشاء رسوم إضافية"
+    fees_collection: "جمع الرسوم"
+    view_fees_collections: "عرض الرسوم مجموعات"
+    fees_submission_by_course: "رسوم التقديم من قبل الدورة"
+    fees_submission_for_each_student: "رسوم التقديم للحصول على كل طالب"
+    fees_structure: "هيكل الرسوم"
+    fees_defaulters: "رسوم المقصرون"
+    finance_categories: "فئات التمويل"
+    transactions: "المعاملات"
+    add_expense: "إضافة المصاريف"
+    expense_list: "قائمة حساب"
+    add_income: "إضافة الدخل"
+    income_list: "قائمة الدخل"
+    transaction_report: "تقرير المعاملات"
+    compare_transactions: "قارن بين المعاملات"
+    donations: "التبرعات"
+    donors: "الجهات المانحة"
+    automatic_transactions: "المعاملات التلقائي"
+    view_payslip: "عرض قسيمة الدفع"
+    asset: "الأصول"
+    view_assets: "عرض الأصول"
+    liability: "مسئولية"
+    view_liability: "عرض المسؤولية"
+    tally_settings: "إعدادات الفرز"
+    export_for_tally: "التصدير للحصول على حسابه"
+    manage_users: "إدارة المستخدمين"
+    view_users: "عرض المستخدمين"
+    add_users: "إضافة مستخدمين"
+    timetable: "الجدول الزمني"
+    create_timetable: "إنشاء الجدول الزمني"
+    set_class_timings: "تعيين التوقيت فئة"
+    view_timetables: "عرض الجداول"
+    institutional_timetable: "الجدول الزمني المؤسسي"
+    create_weekdays: "إنشاء أيام الأسبوع"
+    settings: "إعدادات"
+    manage_course: "إدارة الدورة"
+    manage_batch: "إدارة الدفعية"
+    add_course: "إضافة دورة"
+    add_batch: "إضافة الدفعية"
+    batch_transfers: "دفعة التحويلات"
+    manage_student_category: "إدارة الفئة الطلابية"
+    manage_subjects: "إدارة المواد"
+    general_settings: "إعدادات عامة"
+    add_admission_additional_detail: "إضافة تفاصيل إضافية القبول"
+    student_attendance: "طالب الحضور"
+    attendance_register: "سجل الحضور"
+    attendance_report: "تقرير الحضور"
+    view_students: "رأي الطلاب"
+    student_advanced_search: "طالب بحث متقدم"
+    search_actions_and_events: "عمليات البحث ، والأحداث والأشخاص"
